Update pom. Fix typos. Remove TODOs.